fixing overflow from sidenav

--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,8 @@ body,
 .sideNav {
     margin: 1.25rem 2rem;
     position: static;
-    width: 100%;
+    /* width: 100%; */
+    width: 300px;
 }
 
 .sideNav ul,
@@ -63,6 +64,7 @@ body,
     line-height: 210%;
     cursor: pointer;
 }
+
 .sideNav ul {
     padding: 0;
 }
@@ -188,6 +190,7 @@ input:checked ~ .sideNavContent {
 }
 
 #root > div {
+    overflow-x: hidden;
     height: 100vh;
     display: grid;
     grid-auto-columns: auto;
